[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/weapon_hand/pistol.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/enemy.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.6
bottom_radius = 0.6
height = 1.25

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.960784, 0.505882, 0.101961, 1 )

[sub_resource type="CylinderShape" id=3]
radius = 0.6
height = 1.22395

[sub_resource type="SphereMesh" id=4]
radius = 0.7
height = 1.4

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.980392, 0.917647, 0, 1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 1.394, 0.3, 0.75 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.0313726, 0.027451, 0.027451, 1 )

[sub_resource type="SphereShape" id=8]
radius = 0.7

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.75
bottom_radius = 0.75
height = 0.25

[sub_resource type="CylinderMesh" id=10]
top_radius = 0.75
bottom_radius = 0.75
height = 0.75

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.647059, 0.478431, 0.478431, 1 )

[sub_resource type="CylinderShape" id=12]
radius = 0.75
height = 0.75

[sub_resource type="CylinderShape" id=13]
height = 0.449885

[node name="player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )
script = ExtResource( 2 )

[node name="upper_body" type="Spatial" parent="."]

[node name="torso_area" type="Area" parent="upper_body"]
collision_layer = 2
collision_mask = 2

[node name="body" type="MeshInstance" parent="upper_body/torso_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.158924, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="upper_body/torso_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.19781, 0 )
shape = SubResource( 3 )

[node name="back" type="Position3D" parent="upper_body/torso_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="front" type="Position3D" parent="upper_body/torso_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 2 )

[node name="left" type="Position3D" parent="upper_body/torso_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, 0 )

[node name="head_area" type="Area" parent="upper_body"]
collision_layer = 2
collision_mask = 2

[node name="head" type="MeshInstance" parent="upper_body/head_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14115, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="specs" type="MeshInstance" parent="upper_body/head_area/head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.376 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="upper_body/head_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.141, 0 )
shape = SubResource( 8 )

[node name="weapon" type="Spatial" parent="upper_body/head_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.633468, 0.559657, 0.168389 )

[node name="pistol" parent="upper_body/head_area/weapon" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="upper_body/head_area"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0 )

[node name="bullet_spawn" type="Position3D" parent="upper_body/head_area/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.47366e-07, 0, -1.68566 )

[node name="lower_body" type="Spatial" parent="."]

[node name="wheel_right" type="MeshInstance" parent="lower_body"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.884296, -1.49573, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="wheel_left" type="MeshInstance" parent="lower_body"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.884, -1.496, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="lower_area" type="Area" parent="lower_body"]
collision_layer = 2
collision_mask = 2

[node name="lower_body" type="MeshInstance" parent="lower_body/lower_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.15781, 0 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="lower_body/lower_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.158, 0 )
shape = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.01912, 0 )
shape = SubResource( 13 )
